[package]
name = "furry-emblem-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
fe-data = { path = "fe-data/" }
glium = "0.32.1"
image = { version = "0.24.5", features = ["png"] }
imgui = "0.10.0"
imgui-glium-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
toml = "0.7.2"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
